--- a/index.html
+++ b/index.html
@@ -1,157 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Will You Be My Valentine</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<title>Will You Be My Valentine 💖</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #111;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 15vh;
-    }
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins&display=swap" rel="stylesheet">
 
-    #msg {
-      font-size: 22px;
-      min-height: 160px;
-      padding: 0 15px;
-      white-space: pre-line;
-    }
-
-    h2 {
-      margin-top: 30px;
-      display: none;
-    }
-
-    button {
-      font-size: 20px;
-      padding: 10px 26px;
-      margin: 12px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    #yes {
-      background: #e91e63;
-      color: white;
-    }
-
-    #no {
-      background: #444;
-      color: white;
-    }
-
-    button:disabled {
-      background: #222;
-      cursor: not-allowed;
-    }
-  </style>
+<style>
+body{
+  margin:0;
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:linear-gradient(135deg,#ff9a9e,#fad0c4,#fbc2eb);
+  font-family:'Poppins',sans-serif;
+}
+.card{
+  background:rgba(255,255,255,.25);
+  backdrop-filter:blur(14px);
+  padding:30px;
+  border-radius:22px;
+  width:90%;
+  max-width:420px;
+  text-align:center;
+  box-shadow:0 25px 50px rgba(0,0,0,.25);
+}
+#msg{
+  font-size:20px;
+  min-height:160px;
+  white-space:pre-line;
+  color:#4a0033;
+}
+h2{
+  font-family:'Great Vibes',cursive;
+  font-size:36px;
+  color:#7a003c;
+  display:none;
+  margin:15px 0;
+}
+#buttons{
+  display:none;
+  margin-top:10px;
+}
+button{
+  padding:10px 28px;
+  font-size:18px;
+  border:none;
+  border-radius:30px;
+  cursor:pointer;
+  margin:8px;
+}
+#yes{
+  background:linear-gradient(135deg,#ff4e8a,#ff2e63);
+  color:white;
+}
+#no{
+  background:rgba(255,255,255,.7);
+  color:#333;
+}
+.panda{
+  font-size:64px;
+  animation:dance 1s infinite alternate;
+}
+@keyframes dance{
+  0%{transform:rotate(-10deg) translateY(0);}
+  100%{transform:rotate(10deg) translateY(-12px);}
+}
+</style>
 </head>
 
 <body>
 
+<div class="card">
   <div id="msg"></div>
 
   <h2 id="question">Will you be my Valentine? 💖</h2>
 
-  <div id="buttons" style="display:none;">
+  <div id="buttons">
     <button id="yes">Yes ❤️</button>
-    <button id="no">No 😐</button>
+    <button id="no">No 🙈</button>
   </div>
+</div>
 
-  <!-- Music -->
-  <audio id="music" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-  </audio>
+<!-- Titanic-vibe Romantic Violin (safe) -->
+<audio id="music" loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-14.mp3" type="audio/mpeg">
+</audio>
 
-  <script>
-    const msgBox = document.getElementById("msg");
-    const music = document.getElementById("music");
+<script>
+const msgBox=document.getElementById("msg");
+const music=document.getElementById("music");
 
-    /* Shayari lines */
-    const introLines = [
-      "Koi itna pyara kaise ho sakta hai…",
-      "O bhi poora ka poora kaise ho sakta hai…",
-      "",
-      "Tujhse milkar saari udaasi kam ho jaati hai…",
-      "Tujhse na milkar guzaara kaise ho sakta hai…"
-    ];
+const intro=[
+ "Koi itna pyara kaise ho sakta hai…",
+ "O bhi poora ka poora kaise ho sakta hai…",
+ "",
+ "Tujhse milkar saari udaasi kam ho jaati hai…",
+ "Tujhse na milkar guzaara kaise ho sakta hai…"
+];
 
-    let line = 0;
-    let char = 0;
+let l=0,c=0;
+function typeIntro(){
+ if(l<intro.length){
+  if(c<intro[l].length){
+   msgBox.innerHTML+=intro[l][c++];
+   setTimeout(typeIntro,40);
+  }else{
+   msgBox.innerHTML+="\n";
+   l++;c=0;
+   setTimeout(typeIntro,450);
+  }
+ }else{
+  setTimeout(()=>{
+   question.style.display="block";
+   buttons.style.display="block";
+  },800);
+ }
+}
+window.onload=typeIntro;
 
-    function typeIntro() {
-      if (line < introLines.length) {
-        if (char < introLines[line].length) {
-          msgBox.innerHTML += introLines[line].charAt(char);
-          char++;
-          setTimeout(typeIntro, 45);
-        } else {
-          msgBox.innerHTML += "\n";
-          line++;
-          char = 0;
-          setTimeout(typeIntro, 500);
-        }
-      } else {
-        setTimeout(() => {
-          document.getElementById("question").style.display = "block";
-          document.getElementById("buttons").style.display = "block";
-        }, 800);
-      }
-    }
+let noCount=0;
+const noMsgs=[
+ "❌ Ekda punha vichar kar na 😔",
+ "❌ Asa nako karu na 😢",
+ "❌ Mi kharach sincere ahe 🥺",
+ "❌ Thoda sa chance de na 💔",
+ "❌ Tu ho mhanशील याची mala khatri ahe 💫"
+];
 
-    window.onload = typeIntro;
+function typeText(text,target){
+ target.innerHTML="";
+ let i=0;
+ const t=setInterval(()=>{
+  target.innerHTML+=text[i++];
+  if(i>=text.length)clearInterval(t);
+ },35);
+}
 
-    /* Yes / No logic */
-    let noCount = 0;
+yes.onclick=()=>{
+ music.play();
+ msgBox.innerHTML=
+ "🎉🎉 CONGRATULATIONS 🎉🎉\n\n"+
+ "💖🥰😍 Tu YES mhanalis 💕💞\n"+
+ "Mi khup khup happy aahe 😍❤️\n\n"+
+ "🐼💃 Panda dance for you 💃🐼\n\n"+
+ "✨🎊💐💝";
+};
 
-    const noMessages = [
-      "❌ Ekda punha vichar kar na 😔",
-      "❌ Asa thodasa difficult hota 😢",
-      "❌ Mi kharach sincere ahe 🥺",
-      "❌ Thoda sa chance de na 💔",
-      "❌ Tu ho mhanशील याची mala khatri ahe 💫"
-    ];
-
-    function typeText(text) {
-      msgBox.innerHTML = "";
-      let i = 0;
-      const t = setInterval(() => {
-        msgBox.innerHTML += text.charAt(i);
-        i++;
-        if (i >= text.length) clearInterval(t);
-      }, 40);
-    }
-
-    document.getElementById("yes").onclick = () => {
-      music.play();
-      typeText(
-        "❤️ Yayyy!\nTu ho mhanalis!\n\nTu mazya sathi khup special ahes 💕\nMi nehmi tula khush thevin 🌸"
-      );
-    };
-
-    document.getElementById("no").onclick = () => {
-      music.play();
-
-      if (noCount < noMessages.length) {
-        typeText(noMessages[noCount]);
-        noCount++;
-      }
-
-      if (noCount >= 5) {
-        document.getElementById("no").disabled = true;
-        setTimeout(() => {
-          typeText("❌ Ata No option band zala 😌");
-        }, 1200);
-      }
-    };
-  </script>
+no.onclick=()=>{
+ music.play();
+ if(noCount<noMsgs.length){
+  typeText(noMsgs[noCount],no);
+  noCount++;
+ }
+ if(noCount>=5){
+  no.remove();
+ }
+};
+</script>
 
 </body>
 </html>
